# platform.upstream.libXres

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  configure.ac  libXres-1.0.6.tar.bz2.delta  libXres-1.0.6.tar.bz2.id  project.config  xres.pc.in
include/X11/extensions/: XRes.h
man/: Makefile.am  XRes.man
packaging/: baselibs.conf  libXres.changes  libXres.spec
src/: .cvsignore  Makefile.am  XRes.c
